<resources>
    <string name="app_name">Weather</string>
    <string name="title_o">o</string>
    <string name="title_icon">Icon weather</string>
    <string name="title_permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="title_today">TODAY</string>
    <string name="title_senvenday">7 DAY</string>
    <string name="title_location_unavailable">Location unavailable!</string>
    <string name="title_visibality">Visibality</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_windspeed">Windspeed</string>
    <string name="title_pressure">Pressure</string>
    <string name="title_current_detail">Current Detail</string>
    <string name="title_load_failure">Load data failure</string>
    <string name="title_no_data">No data!</string>
    <string name="title_find_place">Find place</string>
    <string name="title_dew_point">Dew point</string>
    <string name="title_uv_index">UV Index</string>
    <string name="title_location">Location</string>
    <string name="title__select_date">Select Date</string>

    <string name="title_percent">%</string>
    <string name="title_km">km</string>
    <string name="title_setting">Setting</string>
    <string name="title_H">H</string>
    <string name="title_ozone">Ozone</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_speed">Speed</string>


</resources>
