<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.duycuong.weather.ui.screen.main.current_weather.CurrentWeatherViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:visibility="@{viewModel.showProgressBar?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="@{viewModel.currentWeather.summary!=null?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_5"
                tools:layout_editor_absoluteX="@dimen/dp_8"
                tools:layout_editor_absoluteY="@dimen/dp_8">

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@{viewModel.currenTime}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.074"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewTemperature"
                    roundingTemperature="@{viewModel.currentWeather.temperature}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTime" />

                <ImageView
                    android:id="@+id/imageWeather"
                    iconWeather="@{viewModel.icon}"
                    android:layout_width="@dimen/dp_122"
                    android:layout_height="@dimen/dp_133"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_52"
                    android:contentDescription="@string/title_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.938"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@{viewModel.currentWeather.summary}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="@+id/imageWeather"
                    app:layout_constraintStart_toStartOf="@+id/imageWeather"
                    app:layout_constraintTop_toBottomOf="@+id/imageWeather" />

                <TextView
                    android:id="@+id/textViewCurrentDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="50dp"
                    android:text="@string/title_current_detail"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageWeather" />

                <TextView
                    android:id="@+id/textViewHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_24"
                    android:text="@string/title_humidity"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.025"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCurrentDetail" />

                <TextView
                    android:id="@+id/textViewVisibality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_24"
                    android:text="@string/title_visibality"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.025"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewHumidity" />

                <TextView
                    android:id="@+id/textHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_85"
                    android:text="@{String.valueOf(viewModel.currentWeather.humidity)}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.721"
                    app:layout_constraintStart_toEndOf="@+id/textViewHumidity"
                    app:layout_constraintTop_toBottomOf="@+id/imageWeather" />

                <TextView
                    android:id="@+id/textVisibality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_22"
                    android:text="@{String.valueOf(viewModel.currentWeather.visibility)}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.67"
                    app:layout_constraintStart_toEndOf="@+id/textViewVisibality"
                    app:layout_constraintTop_toBottomOf="@+id/textHumidity" />

                <TextView
                    android:id="@+id/textViewWindspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_24"
                    android:text="@string/title_windspeed"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.025"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewVisibality" />

                <TextView
                    android:id="@+id/textViewPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_24"
                    android:text="@string/title_pressure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.025"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewWindspeed" />

                <TextView
                    android:id="@+id/textWindspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_22"
                    android:text="@{String.valueOf(viewModel.currentWeather.windSpeed)}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.67"
                    app:layout_constraintStart_toEndOf="@+id/textViewWindspeed"
                    app:layout_constraintTop_toBottomOf="@+id/textVisibality" />

                <TextView
                    android:id="@+id/textPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/sp_20"
                    android:text="@{String.valueOf(viewModel.currentWeather.pressure)}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.67"
                    app:layout_constraintStart_toEndOf="@+id/textViewWindspeed"
                    app:layout_constraintTop_toBottomOf="@+id/textWindspeed" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>
